--- a/aws-camelk-file/src/main/resources/application.properties
+++ b/aws-camelk-file/src/main/resources/application.properties
@@ -1,2 +1,5 @@
+quarkus.container-image.group=aws-quarkus
+quarkus-container.image.name=camel-aws-s3
 inBox=tmp/input
 s3Name=mys3
+exMsg="IOException occurred due:"
