--- a/aws-camelk-file/pom.xml
+++ b/aws-camelk-file/pom.xml
@@ -19,6 +19,10 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-aws2-s3</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-validator</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <finalName>${project.name}</finalName>
@@ -37,20 +41,4 @@
       </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>standalone</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <configuration>
-              <mainClass>fr.simplex_software.quarkus.camel.integrations.file.FileToS3App</mainClass>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
