Manually tested in standalone from file to SQS

--- a/aws-camelk-file/pom.xml
+++ b/aws-camelk-file/pom.xml
@@ -16,12 +16,12 @@
       <artifactId>camel-quarkus-file</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-aws2-s3</artifactId>
+      <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-aws2-s3</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-validator</artifactId>
+      <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-validator</artifactId>
     </dependency>
   </dependencies>
   <build>
