--- a/aws-camelk-file/src/main/resources/application.properties
+++ b/aws-camelk-file/src/main/resources/application.properties
@@ -3,3 +3,4 @@ quarkus-container.image.name=camel-aws-s3
 inBox=tmp/input
 s3Name=mys3
 exMsg="IOException occurred due:"
+validation-failure-msg="### FileToS3Route.configure(): Cannot validate XML payload against XSD grammar"
