--- a/aws-camelk-s3/pom.xml
+++ b/aws-camelk-s3/pom.xml
@@ -12,8 +12,16 @@
   <name>AWS CamelK :: The S3 to SQS Module</name>
   <dependencies>
     <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-aws2-sqs</artifactId>
+      <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-direct</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-aws2-s3</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-aws2-sqs</artifactId>
     </dependency>
   </dependencies>
   <build>
