Unit testing S3ToSqsRoute

--- a/aws-camelk-s3/pom.xml
+++ b/aws-camelk-s3/pom.xml
@@ -23,6 +23,10 @@
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-aws2-sqs</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-sqs</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <finalName>${project.name}</finalName>
