--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <module>aws-camelk-file</module>
     <module>aws-camelk-s3</module>
     <module>aws-camelk-sqs</module>
+    <module>aws-camelk-jaxrs</module>
+    <module>aws-camelk-provider</module>
   </modules>
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
@@ -47,6 +49,16 @@
         <version>1.12.454</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>fr.simplex-software.quarkus.camel.integrations</groupId>
+        <artifactId>aws-camelk-model</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>fr.simplex-software.quarkus.camel.integrations</groupId>
+        <artifactId>aws-camelk-provider</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
