--- a/aws-camelk-api/pom.xml
+++ b/aws-camelk-api/pom.xml
@@ -8,28 +8,19 @@
     <artifactId>aws-camelk</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>aws-camelk-s3</artifactId>
-  <name>AWS CamelK :: The S3 to SQS Module</name>
+  <artifactId>aws-camelk-api</artifactId>
   <dependencies>
     <dependency>
-      <groupId>org.apache.camel.quarkus</groupId>
-      <artifactId>camel-quarkus-aws2-s3</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.camel.quarkus</groupId>
-      <artifactId>camel-quarkus-aws2-sqs</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-java-sdk-sqs</artifactId>
+      <groupId>fr.simplex-software.quarkus.camel.integrations</groupId>
+      <artifactId>aws-camelk-model</artifactId>
     </dependency>
   </dependencies>
   <build>
     <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
-        <groupId>io.quarkus.platform</groupId>
-        <artifactId>quarkus-maven-plugin</artifactId>
+        <groupId>io.smallrye</groupId>
+        <artifactId>jandex-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
