--- a/aws-camelk-file/pom.xml
+++ b/aws-camelk-file/pom.xml
@@ -25,7 +25,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>${project.name}</finalName>
+    <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
         <groupId>io.quarkus.platform</groupId>
@@ -34,10 +34,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>io.smallrye</groupId>
-        <artifactId>jandex-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
