--- a/aws-camelk-jaxrs/pom.xml
+++ b/aws-camelk-jaxrs/pom.xml
@@ -35,17 +35,18 @@
       <groupId>fr.simplex-software.quarkus.camel.integrations</groupId>
       <artifactId>aws-camelk-model</artifactId>
     </dependency>
+    <dependency>
+      <groupId>fr.simplex-software.quarkus.camel.integrations</groupId>
+      <artifactId>aws-camelk-api</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
-    <finalName>${project.name}</finalName>
+    <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
         <groupId>io.quarkus.platform</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>io.smallrye</groupId>
-        <artifactId>jandex-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
