--- a/aws-camelk-provider/pom.xml
+++ b/aws-camelk-provider/pom.xml
@@ -9,11 +9,25 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>aws-camelk-provider</artifactId>
-  <name>AWS CamelK :: The JAX-RS Provider Module</name>
+  <name>AWS CamelK :: The Provider Module</name>
   <dependencies>
+    <dependency>
+      <groupId>fr.simplex-software.quarkus.camel.integrations</groupId>
+      <artifactId>aws-camelk-api</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>fr.simplex-software.quarkus.camel.integrations</groupId>
       <artifactId>aws-camelk-model</artifactId>
     </dependency>
   </dependencies>
+  <build>
+    <finalName>${project.artifactId}</finalName>
+    <plugins>
+      <plugin>
+        <groupId>io.smallrye</groupId>
+        <artifactId>jandex-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
