--- a/aws-camelk-sqs/pom.xml
+++ b/aws-camelk-sqs/pom.xml
@@ -11,13 +11,17 @@
   <artifactId>aws-camelk-sqs</artifactId>
   <name>AWS CamelK :: The SQS to REST Module</name>
   <dependencies>
-    <dependency>
+    <!--dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-rest</artifactId>
-    </dependency>
+    </dependency-->
     <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-aws2-sqs</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-platform-http</artifactId>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
@@ -25,15 +29,11 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>${project.name}</finalName>
+    <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
         <groupId>io.quarkus.platform</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>io.smallrye</groupId>
-        <artifactId>jandex-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
