--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
     <module>aws-camelk-file</module>
     <module>aws-camelk-s3</module>
     <module>aws-camelk-sqs</module>
-    <module>aws-camelk-jaxrs</module>
     <module>aws-camelk-provider</module>
+    <module>aws-camelk-jaxrs</module>
+    <module>aws-camelk-api</module>
   </modules>
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
