Have split the XSD schema

--- a/aws-camelk-file/pom.xml
+++ b/aws-camelk-file/pom.xml
@@ -23,6 +23,10 @@
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-validator</artifactId>
     </dependency>
+    <dependency>
+      <groupId>fr.simplex-software.quarkus.camel.integrations</groupId>
+      <artifactId>aws-camelk-model</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <finalName>${project.artifactId}</finalName>
