--- a/aws-camelk-sqs/pom.xml
+++ b/aws-camelk-sqs/pom.xml
@@ -12,6 +12,10 @@
   <name>AWS CamelK :: The SQS to REST Module</name>
   <dependencies>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jaxb</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-aws2-sqs</artifactId>
     </dependency>
@@ -22,6 +26,14 @@
     <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-jaxb</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-bean</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-jsonb</artifactId>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
