Testing on minikube

--- a/aws-camelk-file/pom.xml
+++ b/aws-camelk-file/pom.xml
@@ -12,6 +12,18 @@
   <name>AWS CamelK :: The File to S3 Module</name>
   <dependencies>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-kubernetes</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-container-image-jib</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-minikube</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-file</artifactId>
     </dependency>
