--- a/aws-camelk-jaxrs/src/main/resources/application.properties
+++ b/aws-camelk-jaxrs/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 quarkus.container-image.group=aws-quarkus
-quarkus-container.image.name=camel-quarkus-file
+quarkus-container.image.name=camel-jaxrs
 quarkus.kubernetes.namespace=quarkus-camel
 quarkus.kubernetes.part-of=aws-camelk
-quarkus.kubernetes.name=aws-camel-file
+quarkus.kubernetes.name=aws-camel-jaxrs
 quarkus.kubernetes.version=1.0.0-SNAPSHOT
 quarkus.kubernetes.ingress.expose=true
 quarkus.kubernetes.env.vars.aws_region=eu-west-3
 quarkus.kubernetes.env.secrets=aws-secret
-inBox=tmp/input
-s3Name=mys3
-exMsg="IOException occurred due:"
-validation-failure-msg="### FileToS3Route.configure(): Cannot validate XML payload against XSD grammar"
+
+
