--- a/aws-camelk-file/src/main/resources/application.properties
+++ b/aws-camelk-file/src/main/resources/application.properties
@@ -7,7 +7,7 @@ quarkus.kubernetes.version=1.0.0-SNAPSHOT
 quarkus.kubernetes.ingress.expose=true
 quarkus.kubernetes.env.vars.aws_region=eu-west-3
 quarkus.kubernetes.env.secrets=aws-secret
-inBox=tmp/input
+inBox=/tmp/input
 s3Name=mys3
 exMsg="IOException occurred due:"
 validation-failure-msg="### FileToS3Route.configure(): Cannot validate XML payload against XSD grammar"
