--- a/aws-camelk-sqs/src/main/resources/application.properties
+++ b/aws-camelk-sqs/src/main/resources/application.properties
@@ -8,4 +8,4 @@ quarkus.kubernetes.ingress.expose=true
 quarkus.kubernetes.env.vars.aws_region=eu-west-3
 quarkus.kubernetes.env.secrets=aws-secret
 sqs-queue-name=myQueue
-rest-uri=localhost:8080/xfer
+rest-uri=192.168.49.2:30326/xfer
