--- a/aws-camelk-file/pom.xml
+++ b/aws-camelk-file/pom.xml
@@ -20,6 +20,10 @@
       <artifactId>camel-quarkus-aws2-s3</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-s3</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-validator</artifactId>
     </dependency>
