--- a/aws-camelk-s3/pom.xml
+++ b/aws-camelk-s3/pom.xml
@@ -21,6 +21,10 @@
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-s3</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-sqs</artifactId>
     </dependency>
   </dependencies>
