aws-camelk-file: native okay, test raises FileNotFoundException; aws-camelk-s3: native image okay, test raises NotSuchBucketException

--- a/aws-camelk-file/pom.xml
+++ b/aws-camelk-file/pom.xml
@@ -24,8 +24,8 @@
       <artifactId>camel-quarkus-validator</artifactId>
     </dependency>
     <dependency>
-      <groupId>fr.simplex-software.quarkus.camel.integrations</groupId>
-      <artifactId>aws-camelk-model</artifactId>
+      <groupId>io.quarkiverse.amazonservices</groupId>
+      <artifactId>quarkus-amazon-s3</artifactId>
     </dependency>
   </dependencies>
   <build>
