--- a/aws-camelk-sqs/pom.xml
+++ b/aws-camelk-sqs/pom.xml
@@ -27,10 +27,10 @@
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-jaxb</artifactId>
     </dependency>
-    <dependency>
+    <!--dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-bean</artifactId>
-    </dependency>
+    </dependency-->
     <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-jsonb</artifactId>
