--- a/aws-secret.yaml
+++ b/aws-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  AWS_ACCESS_KEY_ID: QUtJQVhHNVZZSlhPV1VYQ0lLT00K
-  AWS_SECRET_ACCESS_KEY: VkEyaDhMaklSWmk5WmVNZStveUtxVDZyeXA3T3JqRHJxRWFtaGNvKwo=
+  AWS_ACCESS_KEY_ID: ...
+  AWS_SECRET_ACCESS_KEY: ...
