--- a/aws-camelk-file/src/main/resources/application.properties
+++ b/aws-camelk-file/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.native.resources.includes=xsd/money-transfers.xsd
+quarkus.native.resources.includes=xsd/*.xsd
 inBox=tmp/input
 s3Name=mys3
 exMsg="IOException occurred due:"
