--- a/aws-camelk-model/pom.xml
+++ b/aws-camelk-model/pom.xml
@@ -54,6 +54,10 @@
           <extension>true</extension>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>io.smallrye</groupId>
+        <artifactId>jandex-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 </project>
