--- a/aws-camelk-s3/src/main/resources/application.properties
+++ b/aws-camelk-s3/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 illegal-state-exception-msg="### S3ToSqsRoute.getS3BucketName(): Cannot find S3 bucket having a name which starts with \"mys3\""
 sqs-queue-name=myQueue
+quarkus.native.additional-build-args =-H:ReflectionConfigurationFiles=reflection-config.json
