Integration tests okay

--- a/aws-camelk-file/src/main/resources/application.properties
+++ b/aws-camelk-file/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 quarkus.native.resources.includes=xsd/*.xsd
-inBox=tmp/input
+inBox=/tmp/input
 s3Name=mys3
 exMsg="IOException occurred due:"
 validation-failure-msg="### FileToS3Route.configure(): Cannot validate XML payload against XSD grammar"
