--- a/aws-camelk-s3/src/main/resources/application.properties
+++ b/aws-camelk-s3/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 quarkus.container-image.group=aws-quarkus
 quarkus-container.image.name=camel-s3
-quarkus.kubernetes.namespace=quarkus-camel
+#quarkus.kubernetes.namespace=quarkus-camel
 quarkus.kubernetes.part-of=aws-camelk
 quarkus.kubernetes.name=aws-camel-s3
 quarkus.kubernetes.version=1.0.0-SNAPSHOT
 quarkus.kubernetes.ingress.expose=true
 quarkus.kubernetes.env.vars.aws_region=eu-west-3
 quarkus.kubernetes.env.secrets=aws-secret
+quarkus.openshift.build-strategy=docker
+quarkus.openshift.route.expose=true
+kubernetes.deployment.target=openshift
 illegal-state-exception-msg="### S3ToSqsRoute.getS3BucketName(): Cannot find S3 bucket having a name which starts with \"mys3\""
 sqs-queue-name=myQueue
