--- a/aws-camelk-sqs/src/main/resources/application.properties
+++ b/aws-camelk-sqs/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 quarkus.container-image.group=aws-quarkus
 quarkus-container.image.name=camel-sqs
-quarkus.kubernetes.namespace=quarkus-camel
+#quarkus.kubernetes.namespace=quarkus-camel
 quarkus.kubernetes.part-of=aws-camelk
 quarkus.kubernetes.name=aws-camel-sqs
 quarkus.kubernetes.version=1.0.0-SNAPSHOT
 quarkus.kubernetes.ingress.expose=true
 quarkus.kubernetes.env.vars.aws_region=eu-west-3
 quarkus.kubernetes.env.secrets=aws-secret
+quarkus.openshift.build-strategy=docker
+quarkus.openshift.route.expose=true
+kubernetes.deployment.target=openshift
 sqs-queue-name=myQueue
 rest-uri=192.168.49.2:30326/xfer
