Tested okay on Openshift Developer Sandbox

--- a/aws-camelk-file/src/main/resources/application.properties
+++ b/aws-camelk-file/src/main/resources/application.properties
@@ -1,15 +1,10 @@
 quarkus.container-image.group=aws-quarkus
 quarkus-container.image.name=camel-quarkus-file
-#quarkus.kubernetes.namespace=quarkus-camel
-quarkus.kubernetes.part-of=aws-camelk
-quarkus.kubernetes.name=aws-camel-file
-quarkus.kubernetes.version=1.0.0-SNAPSHOT
-quarkus.kubernetes.ingress.expose=true
-quarkus.kubernetes.env.vars.aws_region=eu-west-3
-quarkus.kubernetes.env.secrets=aws-secret
-quarkus.openshift.build-strategy=docker
-quarkus.openshift.route.expose=true
-kubernetes.deployment.target=openshift
+quarkus.openshift.part-of=aws-camelk
+quarkus.openshift.name=aws-camel-file
+quarkus.openshift.version=1.0.0-SNAPSHOT
+quarkus.openshift.env.vars.aws_region=eu-west-3
+quarkus.openshift.env.secrets=aws-secret
 inBox=/tmp/input
 s3Name=mys3
 exMsg="IOException occurred due:"
