--- a/aws-camelk-sqs/src/main/resources/application.properties
+++ b/aws-camelk-sqs/src/main/resources/application.properties
@@ -1,14 +1,9 @@
 quarkus.container-image.group=aws-quarkus
 quarkus-container.image.name=camel-sqs
-#quarkus.kubernetes.namespace=quarkus-camel
-quarkus.kubernetes.part-of=aws-camelk
-quarkus.kubernetes.name=aws-camel-sqs
-quarkus.kubernetes.version=1.0.0-SNAPSHOT
-quarkus.kubernetes.ingress.expose=true
-quarkus.kubernetes.env.vars.aws_region=eu-west-3
-quarkus.kubernetes.env.secrets=aws-secret
-quarkus.openshift.build-strategy=docker
-quarkus.openshift.route.expose=true
-kubernetes.deployment.target=openshift
+quarkus.openshift.part-of=aws-camelk
+quarkus.openshift.name=aws-camel-sqs
+quarkus.openshift.version=1.0.0-SNAPSHOT
+quarkus.openshift.env.vars.aws_region=eu-west-3
+quarkus.openshift.env.secrets=aws-secret
 sqs-queue-name=myQueue
-rest-uri=192.168.49.2:30326/xfer
+rest-uri=aws-camel-jaxrs-nicolasduminil-dev.apps.sandbox-m3.1530.p1.openshiftapps.com/xfer
