--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,10 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-openshift</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-container-image-openshift</artifactId>
     </dependency>
     <dependency>
